feat: JPA реализация для репо Item и User